==> BossHobby/QUICKSILVER/src/drivers/drv_motor_dshot_dma_f4.c <==
#include "control.h"
#include "defines.h"
#include "drv_motor.h"
#include "drv_spi.h"
#include "drv_time.h"
#include "profile.h"
#include "project.h"
#include "util.h"
#define DSHOT_BIT_TIME ((PWM_CLOCK_FREQ_HZ / 1000 / profile.motor.dshot_time) - 1)
#define DSHOT_T0H_TIME (DSHOT_BIT_TIME * 0.30 + 0.05)
#define DSHOT_T1H_TIME (DSHOT_BIT_TIME * 0.60 + 0.05)
#define DSHOT_PORT_COUNT (DSHOT_GPIO_A + DSHOT_GPIO_B + DSHOT_GPIO_C)
#define FORWARD 0
#define REVERSE 1

void motor_init() {
  GPIO_InitTypeDef GPIO_InitStructure;

  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

#define MOTOR_PIN(port, pin, pin_af, timer, timer_channel) \
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_##pin;            \
  GPIO_Init(GPIO##port, &GPIO_InitStructure);              \
  if (GPIO##port == GPIOA) {                               \
    DSHOT_GPIO_A = 1;                                      \
    dshot_portA_low |= (GPIO_Pin_##pin);                   \
    dshot_portA_high |= (GPIO_Pin_##pin << 16);            \
  } else if (GPIO##port == GPIOB) {                        \
    DSHOT_GPIO_B = 1;                                      \
    dshot_portB_low |= (GPIO_Pin_##pin);                   \
    dshot_portB_high |= (GPIO_Pin_##pin << 16);            \
  } else if (GPIO##port == GPIOC) {                        \
    DSHOT_GPIO_C = 1;                                      \
    dshot_portC_low |= (GPIO_Pin_##pin);                   \
    dshot_portC_high |= (GPIO_Pin_##pin << 16);            \
  }

  MOTOR_PINS

#undef MOTOR_PIN

  for (int i = 0; i < 48; i = i + 3) {
    portA_buffer[i] = dshot_portA_low;
    portB_buffer[i] = dshot_portB_low;
    portC_buffer[i] = dshot_portC_low;
  }

  for (int i = 2; i < 48; i = i + 3) {
    portA_buffer[i] = dshot_portA_high;
    portB_buffer[i] = dshot_portB_high;
    portC_buffer[i] = dshot_portC_high;
  }

  // DShot timer/DMA2 init
  // TIM1_UP: set all output to HIGH		                at TIM1 update - no dma event
  // TIM1_CH1 DMA2_STREAM_6/CH0: reset output if data=0		at TIM1 update - TIM_Pulse = 0
  // TIM1_CH2 DMA2_STREAM_6/CH0: reset output if data=0		at T0H timing
  // TIM1_CH3 DMA2_STREAM_6/CH0: reset all output			at T1H timing

  TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
  TIM_OCInitTypeDef TIM_OCInitStructure;

  TIM_TimeBaseStructInit(&TIM_TimeBaseStructure);
  TIM_OCStructInit(&TIM_OCInitStructure);
  // TIM1 Periph clock enable
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE);

  /* Time base configuration */
  TIM_TimeBaseStructure.TIM_Period = DSHOT_BIT_TIME;
  TIM_TimeBaseStructure.TIM_Prescaler = 0;
  TIM_TimeBaseStructure.TIM_ClockDivision = 0;
  TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
  TIM_TimeBaseInit(TIM1, &TIM_TimeBaseStructure);
  TIM_ARRPreloadConfig(TIM1, DISABLE);

  /* Timing Mode configuration: Channel 1 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = 0;
  TIM_OC1Init(TIM1, &TIM_OCInitStructure);
  TIM_OC1PreloadConfig(TIM1, TIM_OCPreload_Disable);

  /* Timing Mode configuration: Channel 2 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = DSHOT_T0H_TIME;
  TIM_OC2Init(TIM1, &TIM_OCInitStructure);
  TIM_OC2PreloadConfig(TIM1, TIM_OCPreload_Disable);

  /* Timing Mode configuration: Channel 3 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = DSHOT_T1H_TIME;
  TIM_OC3Init(TIM1, &TIM_OCInitStructure);
  TIM_OC3PreloadConfig(TIM1, TIM_OCPreload_Disable);

  DMA_InitTypeDef DMA_InitStructure;

  DMA_StructInit(&DMA_InitStructure);
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);

  /* DMA2 Stream6_Channel0 configuration ----------------------------------------------*/
  DMA_DeInit(DMA2_Stream6);
  DMA_InitStructure.DMA_Channel = DMA_Channel_0;
  DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&GPIOA->BSRRL;
  DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t)portA_buffer;
  DMA_InitStructure.DMA_DIR = DMA_DIR_MemoryToPeripheral;
  DMA_InitStructure.DMA_BufferSize = 48;
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
  DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Word;
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Word;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
  DMA_InitStructure.DMA_Priority = DMA_Priority_VeryHigh;
  DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
  DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
  DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
  DMA_Init(DMA2_Stream6, &DMA_InitStructure);

  TIM_DMACmd(TIM1, TIM_DMA_CC3 | TIM_DMA_CC2 | TIM_DMA_CC1, ENABLE);

  NVIC_InitTypeDef NVIC_InitStructure;
  /* configure DMA2 Stream 6 interrupt */
  NVIC_InitStructure.NVIC_IRQChannel = DMA2_Stream6_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x00;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;
  NVIC_Init(&NVIC_InitStructure);
  /* enable DMA2 Stream6 transfer complete interrupt */
  DMA_ITConfig(DMA2_Stream6, DMA_IT_TC, ENABLE);

  // set failsafetime so signal is off at start
  pwm_failsafe_time = timer_micros() - 100000;
  pwmdir = FORWARD;
}

void dshot_dma_portA() {
  DMA2_Stream6->PAR = (uint32_t)&GPIOA->BSRRL;
  DMA2_Stream6->M0AR = (uint32_t)portA_buffer;
  DMA_ClearFlag(DMA2_Stream6, DMA_FLAG_TCIF6 | DMA_FLAG_HTIF6 | DMA_FLAG_TEIF6);
  DMA2_Stream6->NDTR = 48;
  TIM1->SR = 0;
  DMA_Cmd(DMA2_Stream6, ENABLE);
  TIM_DMACmd(TIM1, TIM_DMA_CC3 | TIM_DMA_CC2 | TIM_DMA_CC1, ENABLE);
  TIM_SetCounter(TIM1, DSHOT_BIT_TIME);
  TIM_Cmd(TIM1, ENABLE);
}

void dshot_dma_portB() {
  DMA2_Stream6->PAR = (uint32_t)&GPIOB->BSRRL;
  DMA2_Stream6->M0AR = (uint32_t)portB_buffer;
  DMA_ClearFlag(DMA2_Stream6, DMA_FLAG_TCIF6 | DMA_FLAG_HTIF6 | DMA_FLAG_TEIF6);
  DMA2_Stream6->NDTR = 48;
  TIM1->SR = 0;
  DMA_Cmd(DMA2_Stream6, ENABLE);
  TIM_DMACmd(TIM1, TIM_DMA_CC3 | TIM_DMA_CC2 | TIM_DMA_CC1, ENABLE);
  TIM_SetCounter(TIM1, DSHOT_BIT_TIME);
  TIM_Cmd(TIM1, ENABLE);
}

void dshot_dma_portC() {
  DMA2_Stream6->PAR = (uint32_t)&GPIOC->BSRRL;
  DMA2_Stream6->M0AR = (uint32_t)portC_buffer;
  DMA_ClearFlag(DMA2_Stream6, DMA_FLAG_TCIF6 | DMA_FLAG_HTIF6 | DMA_FLAG_TEIF6);
  DMA2_Stream6->NDTR = 48;
  TIM1->SR = 0;
  DMA_Cmd(DMA2_Stream6, ENABLE);
  TIM_DMACmd(TIM1, TIM_DMA_CC3 | TIM_DMA_CC2 | TIM_DMA_CC1, ENABLE);
  TIM_SetCounter(TIM1, DSHOT_BIT_TIME);
  TIM_Cmd(TIM1, ENABLE);
}

void DMA2_Stream6_IRQHandler(void) {
  DMA_Cmd(DMA2_Stream6, DISABLE);
  TIM_DMACmd(TIM1, TIM_DMA_CC3 | TIM_DMA_CC2 | TIM_DMA_CC1, DISABLE);
  DMA_ClearITPendingBit(DMA2_Stream6, DMA_IT_TCIF6);
  TIM_Cmd(TIM1, DISABLE);

  switch (dshot_dma_phase) {
  case 3: //has to be port B here because we are in 3 phase mode and port A runs first in dshot_dma_start()
    dshot_dma_phase = 2;
    dshot_dma_portB();
    return;
  case 2: //could be port B or C here
    dshot_dma_phase = 1;
    //if 3 phase, B already fired in case 3, its just C left ... if 2 phase AC or BC, then first phase has fired and its just C left
    if (DSHOT_PORT_COUNT == 3 || (DSHOT_PORT_COUNT == 2 && DSHOT_GPIO_B == 0) || (DSHOT_PORT_COUNT == 2 && DSHOT_GPIO_A == 0))
      dshot_dma_portC();
    //last possible GPIO phase combo is 2 phase AB, where A has already fired off and now we need B
    else
      dshot_dma_portB();
    return;
  case 1:
    dshot_dma_phase = 0;
    return;
  default:
    dshot_dma_phase = 0;
    break;
  }
}
